--- a/css/index.css
+++ b/css/index.css
@@ -85,6 +85,18 @@ body {
   overflow: auto;
 }
 
+.h2-greenblue {
+  /* font-size: 72px; */
+  background: -webkit-linear-gradient(#30cfd0, #330867);
+  /*background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);*/
+  /* background-image: linear-gradient( 109.6deg,  rgba(48,207,208,1) 11.2%, rgba(51,8,103,1) 92.5% ); */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.h2 a:hover{
+  text-decoration: none;
+}
 
 #display h1 {
   font-size: 50px;
